--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,46 +1,72 @@
+<ion-menu side="start" content-id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <ion-item button [routerLink]="['/home']">
+        <ion-label>
+          Home
+        </ion-label>
+      </ion-item>
+      <ion-item button [routerLink]="['/settings']">
+        <ion-icon src="assets/icon/settings.svg"></ion-icon>
+        <ion-label>
+          Settings
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          FM
+        </ion-label>
+      </ion-item>
+      <ion-item button (click)="openDownload()">
+        <ion-label>
+          Download
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          Liked
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-menu-button slot="start"></ion-menu-button> <!-- Adds a menu button to open the side menu -->
     <ion-title slot="start">
       Music App
     </ion-title>
-    <ion-button color="white" slot="end">
-      <ion-icon src="assets/icon/settings.svg"></ion-icon>
-    </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content id="main-content" [fullscreen]="true">
   <ion-item>
     <ion-searchbar placeholder="Search for music..."></ion-searchbar>
-      <ion-button slot="end" class="circle-button" color="white">
-        <ion-icon src="assets/icon/search.svg"></ion-icon>
-      </ion-button>
+    <ion-button slot="end" class="circle-button" color="white">
+      <ion-icon src="assets/icon/search.svg"></ion-icon>
+    </ion-button>
   </ion-item>
 
   <ion-list>
     <ion-label>Recently Searched:</ion-label>
   </ion-list>
+
   <ion-list>
-    <ion-label>Mood:</ion-label>
+    <ion-label>Mood: {{ Mood }}</ion-label>
+    <ion-item *ngFor="let music of Music">
+      <img [src]="music.album.cover_small" />
+      <ion-label>
+        <h2>{{ music.title }}</h2>
+        <ion-button (click)="playMusic(music.preview)">{{ (songUrl == music.preview && isPlaying) ? "Pause": "Play"}}</ion-button>
+      </ion-label>
+    </ion-item>
   </ion-list>
 
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="home">
-        <ion-icon src="assets/icon/home.svg"></ion-icon>
-        <ion-label>Home</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="radio">
-        <ion-icon src="assets/icon/radio.svg"></ion-icon>
-        <ion-label>Radio</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="liked">
-        <ion-icon src="assets/icon/like.svg"></ion-icon>
-        <ion-label>Liked</ion-label>
-      </ion-tab-button>
-
-    </ion-tab-bar>
-  </ion-tabs>
 </ion-content>
