--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -26,6 +26,14 @@
         <ion-select-option value="15">15</ion-select-option>
       </ion-select>
     </ion-item>
+
+    <ion-item>
+      <ion-select [(ngModel)]="Country" label="Radio Country" label-placement="floating">
+        <ion-select-option value="IE">Ireland</ion-select-option>
+        <ion-select-option value="US">United States</ion-select-option>
+        <ion-select-option value="GB">United Kingdom</ion-select-option>
+      </ion-select>
+    </ion-item>
   </ion-list>
 
   <div class="button-container">
